--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -9,12 +9,12 @@
 
     <!-- Bootstrap core CSS -->
     <!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/jquery.mmenu.css"/>
+    <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/jquery.mmenu.themes.css"/>
+    <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/jquery.mmenu.header.css"/>
+   	<link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/bootstrap-social.css" title="social stylesheet" />
-    <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/jquery.mmenu.css" title="mmenu stylesheet" />
-    <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/jquery.mmenu.themes.css" title="mmenu stylesheet" />
-    <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/jquery.mmenu.header.css" title="mmenu stylesheet" />
     <!-- Custom styles for this template -->
 
     <!-- Custom styles for this template -->
@@ -388,7 +388,7 @@ background-position: left top;
 
 
 
-     
+
     </div>
 
 
