--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -29,6 +29,7 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+  padding-top: 50px;
 }
 .footer {
   position: absolute;
