--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -29,8 +29,13 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
-  padding-top: 50px;
+ /* padding-top: 50px;*/
 }
+  #page  {
+	padding: 0;
+	margin: 0;
+    }
+
 .footer {
   position: absolute;
   bottom: 0;
