--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -339,7 +339,11 @@ background-position: left top;
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#nav_menu"> <i class="fa fa-sitemap"></i></a>
+         <button type="button" class="btn btn-default navbar-btn">
+             <a class="navbar-brand" href="#nav_menu"> <i class="fa fa-sitemap"></i></a>
+         </button>
+            
+
           <a class="navbar-brand" href="/">protoboard.org</a>
         </div>
 
