--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -340,9 +340,9 @@ background-position: left top;
             <span class="icon-bar"></span>
           </button>
          <button type="button" class="btn btn-default navbar-btn">
-             <a class="navbar-brand" href="#nav_menu"> <i class="fa fa-sitemap"></i></a>
+             <a href="#nav_menu"> <i class="fa fa-sitemap"></i></a>
          </button>
-            
+
 
           <a class="navbar-brand" href="/">protoboard.org</a>
         </div>
