--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -343,7 +343,7 @@ background-position: left top;
           <a class="navbar-brand" href="#nav_menu"> <i class="fa fa-sitemap"></i></a>
 
 
-          <a class="navbar-brand" href="/">protoboard.org</a>
+         <!-- <a class="navbar-brand" href="/">protoboard.org</a> -->
         </div>
 
         <div  id="navbar" class=" collapse navbar-collapse">
