--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -340,7 +340,7 @@ background-position: left top;
             <span class="icon-bar"></span>
           </button>
 
-          <a class="navbar-brand" href="#nav_menu"> <i class="fa fa-navicon"></i>  </a>
+          <a class="navbar-brand" href="#nav_menu"> <i class="fa fa-navicon"></i> Navegar </a>
 
 
          <!-- <a class="navbar-brand" href="/">protoboard.org</a> -->
