--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -1,4 +1,5 @@
-{% extends "activitytree/base.html" %}
+
+0{% extends "activitytree/base.html" %}
 
 
 
@@ -6,9 +7,7 @@
 
 
     <div class = "row">
-
-      <h3> {{ video.title }} </h3>
-            <div class="video">
+          <div class="video">
                     <iframe width="640" height="510" src="{{ video.url }}" frameborder="0" allowfullscreen></iframe> </div>
             </div>
 
@@ -24,5 +23,11 @@
 
        </form>
 
+    </div>
+    <div class="panel panel-default">
+            <div class="panel-heading"> <h3 class="panel-title">{{ video.title }}</h3></div>
+              <div class="panel-body">
+                Panel content
+              </div>
     </div>
 {% endblock content %}
