--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -1,5 +1,5 @@
 
-0{% extends "activitytree/base.html" %}
+{% extends "activitytree/base.html" %}
 
 
 
@@ -7,9 +7,25 @@
 
 
     <div class = "row">
-          <div class="video">
-                    <iframe width="640" height="510" src="{{ video.url }}" frameborder="0" allowfullscreen></iframe> </div>
-            </div>
+        <div class="col-md-8">
+
+                <div class="video">
+                    <iframe width="640" height="510" src="{{ video.url }}" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+      <div class="col-md-8">
+      <div class="panel panel-default">
+              <div class="panel-heading">
+                  <h3 class="panel-title">{{ video.title }}</h3>
+              </div>
+              <div class="panel-body">
+                Panel content
+              </div>
+    </div>
+
+      </div>
+
+    </div>
 
     <div class="row">
 
@@ -24,8 +40,11 @@
        </form>
 
     </div>
+
     <div class="panel panel-default">
-            <div class="panel-heading"> <h3 class="panel-title">{{ video.title }}</h3></div>
+              <div class="panel-heading">
+                  <h3 class="panel-title">{{ video.title }}</h3>
+              </div>
               <div class="panel-body">
                 Panel content
               </div>
