--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -20,8 +20,8 @@
 
 
                <ul class="pager">
-                     <li class="previous"><span class="nav_prev" > &larr; Anterior</span></li>
-                    <li class="next"><span class="nav_next">  Continuar &rarr;</span></li>
+                     <li ><span class="nav_prev" > &larr; Anterior</span></li>
+                    <li ><span class="nav_next">  Continuar &rarr;</span></li>
                </ul>
 
        </form>
