--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -27,6 +27,7 @@
        </form>
 
     </div>
+        <div class = "row">
       <div class="panel panel-default">
               <div class="panel-heading">
                   <h3 class="panel-title">{{ video.title }}</h3>
@@ -34,7 +35,9 @@
               <div class="panel-body">
                 Panel content
               </div>
+
     </div>
+             </div>
 
       </div>
 
