--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -7,13 +7,13 @@
 
 
     <div class = "row">
-        <div class="col-md-9">
+        <div class="col-md-9 col-lg-8">
 
                 <div class="video">
                     <iframe width="640" height="510" src="{{ video.url }}" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
-      <div class="col-md-3">
+      <div class="col-md-3 col-lg-4">
           <div class="row">
 
          <form id="learning_activity_form"   role="form" action="{{uri}}" method = "POST">{% csrf_token %}
