--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -7,38 +7,39 @@
 
 
     <div class = "row">
-        <div class="col-md-9 col-lg-8">
+        <div class="col-md-10">
 
                 <div class="video">
                     <iframe width="640" height="510" src="{{ video.url }}" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
-      <div class="col-md-3 col-lg-4">
-          <div class="row">
 
-         <form id="learning_activity_form"   role="form" action="{{uri}}" method = "POST">{% csrf_token %}
+        <div class="col-md-2">
+            <div class="row">
+
+                <form id="learning_activity_form"   role="form" action="{{uri}}" method = "POST">{% csrf_token %}
 
 
-               <ul class="pager">
-                     <li ><span class="nav_prev" > &larr; Anterior</span></li>
-                    <li ><span class="nav_next">  Continuar &rarr;</span></li>
-               </ul>
+                   <ul class="pager">
+                        <li ><span class="nav_prev" > &larr; Anterior</span></li>
+                        <li ><span class="nav_next">  Continuar &rarr;</span></li>
+                    </ul>
 
-       </form>
+                </form>
 
-    </div>
-<div class="row">
-      <div class="panel panel-default">
-              <div class="panel-heading">
-                  <h3 class="panel-title">{{ video.title }}</h3>
-              </div>
-              <div class="panel-body">
-                Panel content
-              </div>
+           </div>
+            <div class="row">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                      <h3 class="panel-title">{{ video.title }}</h3>
+                    </div>
+                    <div class="panel-body">
+                            Panel content
+                    </div>
 
-    </div>
-    </div>
-             </div>
+                </div>
+            </div>
+        </div>
 
 
     </div>
