--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -9,11 +9,14 @@
     <div class = "row">
         <div class="col-md-10">
 
+                 <row>
+
                 <div class="video">
                     <iframe width="640" height="510" src="{{ video.url }}" frameborder="0" allowfullscreen></iframe>
                 </div>
+                </row>
 
-            <div class="row">
+                <div class="row">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                       <h3 class="panel-title">{{ video.title }}</h3>
@@ -40,6 +43,17 @@
                 </form>
 
            </div>
+
+            <div class="row">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                      <h3 class="panel-title">{{ video.title }}</h3>
+                    </div>
+                    <div class="panel-body">
+                            Panel content
+                    </div>
+
+                </div>
 
         </div>
 
