--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -9,12 +9,12 @@
     <div class = "row">
         <div class="col-md-10">
 
-                 <row>
+                 <div class = "row">
 
                 <div class="video">
                     <iframe width="640" height="510" src="{{ video.url }}" frameborder="0" allowfullscreen></iframe>
                 </div>
-                </row>
+                </div>
 
                 <div class="row">
                 <div class="panel panel-default">
