--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 
-    <div class = "row">
+   <div class = "row">
         <div class="col-md-10">
 
 
@@ -54,7 +54,7 @@
 
 
     </div>
-
+   </div>
    <div class = "row">
 
     <div class="panel panel-default">
