--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -266,6 +266,7 @@ background-position: left top;
     position: relative;
     padding-bottom: 56.25%;
     padding-top: 30px; height: 0; overflow: hidden;
+    margin-bottom:10px;
 }
 
 .video iframe,
