--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -14,15 +14,7 @@
                     <iframe width="640" height="510" src="{{ video.url }}" frameborder="0" allowfullscreen></iframe>
                 </div>
 
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                      <h3 class="panel-title">{{ video.title }}</h3>
-                    </div>
-                    <div class="panel-body">
-                            Panel content
-                    </div>
 
-                </div>
         </div>
         <div class="col-md-3">
             <div class="row">
@@ -56,5 +48,17 @@
     </div>
    </div>
    <div class = "row">
+   <div class="col-md-9">
+    <div class="panel panel-default">
+                    <div class="panel-heading">
+                      <h3 class="panel-title">{{ video.title }}</h3>
+                    </div>
+                    <div class="panel-body">
+                            Panel content
+                    </div>
+
+                </div>
+   </div>
+   </div>
 
 {% endblock content %}
