--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -379,7 +379,13 @@ background-position: left top;
 
 
     <div id="main_container" class="container-fluid">
-
+     <row>
+         <ol class="breadcrumb">
+  <li><a href="#">Home</a></li>
+  <li><a href="#">Library</a></li>
+  <li class="active">Data</li>
+</ol>
+     </row>
 
 
             {% block content %}
