--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -381,7 +381,7 @@ background-position: left top;
     <div id="main_container" class="container-fluid">
      <row>
          <ol class="breadcrumb">
-  <li><a href="#">Home</a></li>
+  <li><a href="#nav_menu">  <i class="fa fa-navicon"></i> PPP  </a></li>
   <li><a href="#">Library</a></li>
   <li class="active">Data</li>
 </ol>
