--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -383,13 +383,13 @@ background-position: left top;
          <ol class="breadcrumb">
             <li><a href="#nav_menu">  <i class="fa fa-navicon"></i> PPP  </a></li>
 
-             {%for link in breadcrumb%}
+             {%for link in breadcrumbs%}
 
             <li><a href="{{link.uri}}">link.name</a></li>
 
              {%endfor%}
              <li class="active">Data</li>
-            
+
 <       </ol>
      </row>
 
