--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -379,19 +379,28 @@ background-position: left top;
 
 
     <div id="main_container" class="container-fluid">
+     {% if breadcrumbs%}
      <row>
+
+     {% if breadcrumbs%}
          <ol class="breadcrumb">
-            <li><a href="#nav_menu">  <i class="fa fa-navicon"></i> PPP  </a></li>
 
              {% for l in breadcrumbs %}
+            {% if forloop.first %}
+            <li><a href="#nav_menu">  <i class="fa fa-navicon"></i> {{l.name}}  </a></li>
+            {%elif forloop.last%}
+             <li class="active">{{l.name}}</li>
+            {%elif%}
 
             <li><a href="{{ l.uri }}">{{l.name}}</a></li>
 
+             {%endif%}
              {%endfor%}
 
-             <li class="active">Data</li>
 
        </ol>
+     {% endif %}
+
      </row>
 
 
