--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -384,7 +384,9 @@ background-position: left top;
          <ol class="breadcrumb">
             {% for l in breadcrumbs %}
                 {% if forloop.first %}
-                    <li><a href="#nav_menu">  <i class="fa fa-navicon"></i> {{l.name}}  </a></li>
+                    <li><a href="#nav_menu">  <i class="fa fa-navicon"></i></a>
+                    <a href="{{ l.uri }}">{{l.name}}</a>
+                    </li>
                 {% elif forloop.last%}
                     <li class="active">{{l.name}}</li>
                 {%else%}
