css for selected activity in mmenu

--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -312,6 +312,10 @@ background-position: left top;
      {%  endblock style %}
 
 
+   li.mm-selected > span {
+        background:#00BFFF;
+}
+
     </style>
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
