--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -312,7 +312,7 @@ background-position: left top;
      {%  endblock style %}
 
 
-   li.mm-selected > span {
+   li.mm-selected > a {
         background:#00BFFF;
 }
 
