css for selected activity in mmenu

--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -312,9 +312,10 @@ background-position: left top;
      {%  endblock style %}
 
 
-   li.mm-selected > a {
-        background:#00BFFF;
-}
+   .mm-menu.mm-light .mm-list > li.mm-selected > a:not(.mm-subopen), .mm-menu.mm-light .mm-list > li.mm-selected > span
+   {
+    background: none repeat scroll 0 0 #00BFFF;
+   }
 
     </style>
     <!-- Just for debugging purposes. Don't actually copy this line! -->
