css for selected activity in mmenu

--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -314,7 +314,7 @@ background-position: left top;
 
    .mm-menu.mm-light .mm-list > li.mm-selected > a:not(.mm-subopen), .mm-menu.mm-light .mm-list > li.mm-selected > span
    {
-    background: none repeat scroll 0 0 #00BFFF;
+    background: none repeat scroll 0 0 #428BCA;
    }
 
     </style>
