--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -317,6 +317,10 @@ background-position: left top;
     background: none repeat scroll 0 0 #D9EDF7;
    }
 
+   .fa-check-square-o
+   {
+       color: green;
+   }
     </style>
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
