--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -317,7 +317,7 @@ background-position: left top;
     background: none repeat scroll 0 0 #D9EDF7;
    }
 
-   .fa-check-square-o
+   .fa-check
    {
        color: green;
    }
