--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/jquery.mmenu.css"/>
     <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/jquery.mmenu.themes.css"/>
     <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/jquery.mmenu.header.css"/>
-   	<link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/jquery.raty.css"/>
+    <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}css/bootstrap-social.css" title="social stylesheet" />
     <!-- Custom styles for this template -->
@@ -428,6 +429,8 @@ background-position: left top;
     <script  type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script  type="text/javascript" src="{{MEDIA_URL}}js/jquery.mmenu.min.all.js"></script>
     <script  type="text/javascript" src="{{MEDIA_URL}}js/jquery.mmenu.header.js"></script>
+    <script  type="text/javascript" src="{{MEDIA_URL}}js/jquery.raty.js"></script>
+
 
 
   <script type="text/javascript" charset="utf-8">
