--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -64,7 +64,10 @@
 {% endblock content %}
 
 {% block scripts %}
+         <script type="text/javascript" charset="utf-8">
+
+
 $('#rating-info').raty({ starType: 'i' });
 
-
+   </script>
 {% endblock scripts %}
