--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -67,7 +67,7 @@
          <script type="text/javascript" charset="utf-8">
 
 
-$('#rating-info').raty({starType : 'i'}  );
+$('#rating-info').raty({ path: '{{MEDIA_URL}}images'}  );
 
    </script>
 {% endblock scripts %}
