--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -36,9 +36,7 @@
                     <div class="panel-heading">
                       <h3 class="panel-title">{{ video.title }}</h3>
                     </div>
-                    <div id="rating-info" class="panel-body">
 
-                    </div>
 
                 </div>
 
@@ -50,11 +48,14 @@
    <div class = "row">
    <div class="col-md-9">
     <div class="panel panel-default">
-                    <div class="panel-heading">
-                      <h3 class="panel-title">{{ video.title }}</h3>
-                    </div>
+
                     <div class="panel-body">
-                            Panel content
+                      <h4>{{ video.title }}</h4>
+                     <div id="rating-info" class="panel-body">
+                       Texto
+                    </div>
+
+
                     </div>
 
                 </div>
