--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -50,9 +50,9 @@
     <div class="panel panel-default">
 
                     <div class="panel-body">
-                      <h4>{{ video.title }}</h4>
+                      <h5>{{ video.title }}</h5>
                      <div id="rating-info" class="panel-body">
-                       Texto
+                       Valoración:
                     </div>
 
 
