--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -50,7 +50,7 @@
 
 
                       <h5>{{ video.title }}</h5>
-                     <div id="rating-info" class="panel-body">
+                     <div id="rating-info">
                        Valoración:
                     </div>
 
