--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -46,18 +46,17 @@
     </div>
    </div>
    <div class = "row">
-   <div class="col-md-9">
-
-
-                      <h5>{{ video.title }}</h5>
+   <div class="col-md-4">
+                      <h6>{{ video.title }}</h6>
                      <div id="rating-info">
                        Valoración:
                     </div>
-
-
-
+   </div>
+   <div class="col-md-5">
+          Share
 
    </div>
+
    </div>
 
 {% endblock content %}
