--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -65,14 +65,16 @@
          <script type="text/javascript" charset="utf-8">
 
 
-$('#rating-info').raty({ path: '{{MEDIA_URL}}images', score: 3}  );
-
-
 $('#rating-info').raty({
-  click: function(score, evt) {
-    alert('ID: ' + this.id + "\nscore: " + score + "\nevent: " + evt);
-  }
-});
+    path: '{{MEDIA_URL}}images',
+    score: 3,
+    click: function(score, evt)
+            {
+            alert('ID: ' + this.id + "\nscore: " + score + "\nevent: " + evt);
+            }
+
+    });
+
 
    </script>
 {% endblock scripts %}
