--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -71,10 +71,65 @@ $('#rating-info').raty({
     click: function(score, evt)
             {
             alert('ID: ' + this.id + "\nscore: " + score + "\nevent: " + evt);
+
+             $.ajax(
+                {
+                    url: '/execute_queue',
+                    type: "POST",
+                    contentType: "application/json",
+                    data: JSON.stringify({"jsonrpc": "2.0", "method": "{{ activity_uri }}", "params": [code], "id": 1 ,
+                    "keypresses": keypresses, "mousepresses": mousepresses, "mousemovement": mouse }),
+                    dataType: "json",
+                    success: function(data, textStatus, jqXHR) {
+                        alert ("Success");
+
+                        },
+                    error: function(jqXHR, textStatus, errorThrown) {
+                        alert ("Error:" + textStatus+" "+errorThrown+" "+jqXHR.responseText);
+                        }
+                    });
+
+
+
             }
 
     });
 
+function getCookie(name) {
+                var cookieValue = null;
+                if (document.cookie && document.cookie != '') {
+                    var cookies = document.cookie.split(';');
+                    for (var i = 0; i < cookies.length; i++) {
+                        var cookie = jQuery.trim(cookies[i]);
+                        // Does this cookie string begin with the name we want?
+                        if (cookie.substring(0, name.length + 1) == (name + '=')) {
+                            cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                            break;
+                        }
+                    }
+                }
+                return cookieValue;
+            }
+
+function csrfSafeMethod(method) {
+                // these HTTP methods do not require CSRF protection
+                return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+            }
+            $.ajaxSetup({
+                crossDomain: false, // obviates need for sameOrigin test
+                beforeSend: function(xhr, settings) {
+                    if (!csrfSafeMethod(settings.type)) {
+                        var csrftoken = getCookie('csrftoken');
+
+
+                        xhr.setRequestHeader("X-CSRFToken", csrftoken);
+                    }
+                }
+            });
+
 
    </script>
+
+
+
 {% endblock scripts %}
