--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -8,7 +8,7 @@
     <div class = "row">
 
 
-       {% for activity in children %}
+       {% for activity in navegation %}
 
         <h1><a href="{{activity.learning_activity.uri}}"></a>  {{activity.learning_activity.name}}</a></h1>
 
