--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -45,4 +45,15 @@
 
 
     </div>
+
 {% endblock content %}
+
+{% block scripts %}
+
+<script type="text/javascript">
+
+XML_NAV ="{{XML_NAV}}"
+
+</script>
+
+{% endblock scripts %}
