--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -70,7 +70,7 @@
                     icon = $("<i/>", {"class": "fa fa-video-camera"});
 
                 var title = $("<a/>", {"href":this.getAttribute("uri")})
-                        .append($("<h4/>", {"text":this.getAttribute("identifier")}).prepend(icon)
+                        .append($("<h4/>", {"text":"&#160"+this.getAttribute("identifier")}).prepend(icon)
                 );
 
 
