--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -427,6 +427,7 @@ background-position: left top;
     <!-- Placed at the end of the document so the pages load faster -->
     <script  type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script  type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script  type="text/javascript" src="{{MEDIA_URL}}js/mustache.min.js"></script>
     <script  type="text/javascript" src="{{MEDIA_URL}}js/jquery.mmenu.min.all.js"></script>
     <script  type="text/javascript" src="{{MEDIA_URL}}js/jquery.mmenu.header.js"></script>
     <script  type="text/javascript" src="{{MEDIA_URL}}js/jquery.raty.js"></script>
