--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -69,7 +69,7 @@
 
             $current.children().each(function( index ) {
                 var rendered = Mustache.render(template, {name: this.getAttribute("identifier"),
-                    uri:this.getAttribute("identifier")}
+                    uri:this.getAttribute("uri")}
                 );
                 $("#navlist").append(rendered);
 
