--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -71,38 +71,40 @@
                 var rendered ="";
                 var uri_string = this.getAttribute("uri");
 
-                if (uri_string.lastIndexOf("/test/", 0) === 0)
+                if (this.getAttribute("is_container") =="True")
                 {
                     rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
-                        uri:uri_string,
-                        icon:"fa fa-pencil-square-o"});
+                            uri: uri_string,
+                            icon: "fa fa-folder-open"})
+                }
+                else {
+                    if (uri_string.lastIndexOf("/test/", 0) === 0) {
+                        rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
+                            uri: uri_string,
+                            icon: "fa fa-pencil-square-o"});
 
+                    }
+                    else if (uri_string.lastIndexOf("/survey/", 0) === 0) {
+                        rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
+                            uri: uri_string,
+                            icon: "fa fa-question"});
+                    }
+                    else if (uri_string.lastIndexOf("/activity/video/", 0) === 0) {
+                        rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
+                            uri: uri_string,
+                            icon: "fa fa-video-camera"});
+                    }
+                    else if (uri_string.lastIndexOf("/activity/", 0) === 0) {
+                        rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
+                            uri: uri_string,
+                            icon: "fa fa-book"});
+                    }
+                    else if (uri_string.lastIndexOf("/program/", 0) === 0) {
+                        rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
+                            uri: uri_string,
+                            icon: "fa fa-coffee"});
+                    }
                 }
-                else if (uri_string.lastIndexOf("/survey/", 0) === 0)
-                {
-                    rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
-                        uri:uri_string,
-                        icon:"fa fa-question"});
-                }
-                else if (uri_string.lastIndexOf("/activity/video/", 0) === 0)
-                {
-                    rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
-                        uri:uri_string,
-                        icon:"fa fa-video-camera"});
-                }
-                else if (uri_string.lastIndexOf("/activity/", 0) === 0)
-                {
-                    rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
-                        uri:uri_string,
-                        icon:"fa fa-book"});
-                }
-                  else if (uri_string.lastIndexOf("/program/", 0) === 0)
-                {
-                    rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
-                        uri:uri_string,
-                        icon:"fa fa-coffee"});
-                }
-
                 $("#navlist").append(rendered);
 
             });
