--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -43,6 +43,8 @@
 <script id="container_template" type="x-tmpl-mustache">
 	<div class="col-xs-8 col-md-4">
 		<div class="thumbnail">
+		     <img src="[[image]]" alt="...">
+
 			<div class="caption">
 				<a href="[[uri]]">
 					<h4><i class="[[icon]]"></i> [[name]] </h4>
@@ -75,34 +77,41 @@
                 {
                     rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
                             uri: uri_string,
-                            icon: "fa fa-folder-open"})
+                            icon: "fa fa-folder-open",
+                            image:this.getAttribute("identifier")
+                    })
                 }
                 else {
                     if (uri_string.lastIndexOf("/test/", 0) === 0) {
                         rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
                             uri: uri_string,
-                            icon: "fa fa-pencil-square-o"});
+                            icon: "fa fa-pencil-square-o",
+                            image:this.getAttribute("identifier")});
 
                     }
                     else if (uri_string.lastIndexOf("/survey/", 0) === 0) {
                         rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
                             uri: uri_string,
-                            icon: "fa fa-question"});
+                            icon: "fa fa-question",
+                            image:this.getAttribute("identifier")});
                     }
                     else if (uri_string.lastIndexOf("/activity/video/", 0) === 0) {
                         rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
                             uri: uri_string,
-                            icon: "fa fa-video-camera"});
+                            icon: "fa fa-video-camera",
+                            image:this.getAttribute("identifier")});
                     }
                     else if (uri_string.lastIndexOf("/activity/", 0) === 0) {
                         rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
                             uri: uri_string,
-                            icon: "fa fa-book"});
+                            icon: "fa fa-book",
+                            image:this.getAttribute("identifier")});
                     }
                     else if (uri_string.lastIndexOf("/program/", 0) === 0) {
                         rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
                             uri: uri_string,
-                            icon: "fa fa-coffee"});
+                            icon: "fa fa-coffee",
+                            image:this.getAttribute("identifier")});
                     }
                 }
                 $("#navlist").append(rendered);
