--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -49,7 +49,28 @@
 				<a href="[[uri]]">
 					<h4><i class="[[icon]]"></i> [[name]] </h4>
 				</a>
-				<p>[[description]]</p>
+				<p>[[description]]</p>				      <div class="modal-footer" style="text-align: left">
+                         <div class="progress">
+                             <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                                  aria-valuemax="100" style="width: 70%;">
+                                 <span class="sr-only">0% Complete</span>
+                             </div>
+                         </div>
+                     </div>
+                     <div class="row">
+                         <div class="col-md-4">
+                             <b>60%</b><br/>
+                             <small>FUNDED</small>
+                         </div>
+                         <div class="col-md-4">
+                             <b>$400</b><br/>
+                             <small>PLEDGED</small>
+                         </div>
+                         <div class="col-md-4">
+                             <b>18</b><br/>
+                             <small>DAYS</small>
+                         </div>
+                     </div>
 			</div>
 		</div>
 	</div>
