--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -59,11 +59,11 @@
                      </div>
                      <div class="row">
                          <div class="col-md-4">
-                             <b>60%</b><br/>
+                            <i class="fa fa-check"></i><br/>
                              <small>FUNDED</small>
                          </div>
                          <div class="col-md-4">
-                             <b>$400</b><br/>
+                               <i class="fa fa-lock"></i><br/>
                              <small>PLEDGED</small>
                          </div>
                          <div class="col-md-4">
