--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -59,11 +59,11 @@
                      </div>
                      <div class="row">
                          <div class="col-md-4">
-                            <i class="fa fa-check"></i><br/>
+                           <h4>  <i class="fa fa-check"></i>h4</h4><br/>
                              <small>FUNDED</small>
                          </div>
                          <div class="col-md-4">
-                               <i class="fa fa-lock"></i><br/>
+                               <h5>  <i class="fa fa-lock"></i>h5</h5>
                              <small>PLEDGED</small>
                          </div>
                          <div class="col-md-4">
