--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -63,7 +63,7 @@
                              <small>FUNDED</small>
                          </div>
                          <div class="col-md-4">
-                               <h4>  <i class="fa fa-lock fa-2x"></i><br/>
+                               <i class="fa fa-lock fa-2x"></i><br/>
                              <small>PLEDGED</small>
                          </div>
                          <div class="col-md-4">
