--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -46,7 +46,7 @@
 		     <img src="[[image]]" alt="...">
 
 			<div class="caption">
-				<a href="[[uri]]">
+				<a href="[[uri]]" class"disabled">
 					<h4><i class="[[icon]]"></i> [[name]] </h4>
 				</a>
 				<p>[[description]]</p>				      <div class="modal-footer" style="text-align: left">
@@ -60,15 +60,15 @@
                      <div class="row">
                          <div class="col-md-4">
                            <i class="fa fa-check fa-2x"></i><br/>
-                             <small>FUNDED</small>
+                             <small>COMPLETO</small>
                          </div>
                          <div class="col-md-4">
                                <i class="fa fa-lock fa-2x"></i><br/>
-                             <small>PLEDGED</small>
+                             <small>BLOQUEADO</small>
                          </div>
                          <div class="col-md-4">
-                             <b>18</b><br/>
-                             <small>DAYS</small>
+                              <i class="fa fa-puzzle-piece fa-2x"></i><br/>
+                             <small>15 ACTIVIDADES</small>
                          </div>
                      </div>
 			</div>
