--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -68,7 +68,7 @@
                          </div>
                          <div class="col-md-4">
                               <i class="fa fa-puzzle-piece fa-2x"></i><br/>
-                             <small>15 ACTIVIDADES</small>
+                             <small>0/15</small>
                          </div>
                      </div>
 			</div>
