--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -109,32 +109,38 @@
                         rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
                             uri: uri_string,
                             icon: "fa fa-pencil-square-o",
-                            image:this.getAttribute("image")});
+                            image:this.getAttribute("image"),
+                            description:this.getAttribute("description")
+                        });
 
                     }
                     else if (uri_string.lastIndexOf("/survey/", 0) === 0) {
                         rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
                             uri: uri_string,
                             icon: "fa fa-question",
-                            image:this.getAttribute("image")});
+                            image:this.getAttribute("image"),
+                            description:this.getAttribute("description")});
                     }
                     else if (uri_string.lastIndexOf("/activity/video/", 0) === 0) {
                         rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
                             uri: uri_string,
                             icon: "fa fa-video-camera",
-                            image:this.getAttribute("image")});
+                            image:this.getAttribute("image"),
+                            description:this.getAttribute("description")});
                     }
                     else if (uri_string.lastIndexOf("/activity/", 0) === 0) {
                         rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
                             uri: uri_string,
                             icon: "fa fa-book",
-                            image:this.getAttribute("image")});
+                            image:this.getAttribute("image"),
+                            description:this.getAttribute("description")});
                     }
                     else if (uri_string.lastIndexOf("/program/", 0) === 0) {
                         rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
                             uri: uri_string,
                             icon: "fa fa-coffee",
-                            image:this.getAttribute("image")});
+                            image:this.getAttribute("image"),
+                            description:this.getAttribute("description")});
                     }
                 }
                 $("#navlist").append(rendered);
