--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -97,7 +97,7 @@
 
                 if (this.getAttribute("is_container") =="True")
                 {
-                    rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
+                    rendered = Mustache.render(container_template, {name: this.getAttribute("heading"),
                             uri: uri_string,
                             icon: "fa fa-folder-open",
                             image:this.getAttribute("image"),
@@ -106,7 +106,7 @@
                 }
                 else {
                     if (uri_string.lastIndexOf("/test/", 0) === 0) {
-                        rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
+                        rendered = Mustache.render(container_template, {name: this.getAttribute("heading"),
                             uri: uri_string,
                             icon: "fa fa-pencil-square-o",
                             image:this.getAttribute("image"),
@@ -115,28 +115,28 @@
 
                     }
                     else if (uri_string.lastIndexOf("/survey/", 0) === 0) {
-                        rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
+                        rendered = Mustache.render(container_template, {name: this.getAttribute("heading"),
                             uri: uri_string,
                             icon: "fa fa-question",
                             image:this.getAttribute("image"),
                             description:this.getAttribute("description")});
                     }
                     else if (uri_string.lastIndexOf("/activity/video/", 0) === 0) {
-                        rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
+                        rendered = Mustache.render(container_template, {name: this.getAttribute("heading"),
                             uri: uri_string,
                             icon: "fa fa-video-camera",
                             image:this.getAttribute("image"),
                             description:this.getAttribute("description")});
                     }
                     else if (uri_string.lastIndexOf("/activity/", 0) === 0) {
-                        rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
+                        rendered = Mustache.render(container_template, {name: this.getAttribute("heading"),
                             uri: uri_string,
                             icon: "fa fa-book",
                             image:this.getAttribute("image"),
                             description:this.getAttribute("description")});
                     }
                     else if (uri_string.lastIndexOf("/program/", 0) === 0) {
-                        rendered = Mustache.render(container_template, {name: this.getAttribute("identifier"),
+                        rendered = Mustache.render(container_template, {name: this.getAttribute("heading"),
                             uri: uri_string,
                             icon: "fa fa-coffee",
                             image:this.getAttribute("image"),
