--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -41,9 +41,11 @@
 {% block scripts %}
 
 <script id="container_template" type="x-tmpl-mustache">
-	<div class="col-xs-8 col-md-4">
+	<div class="col-xs-12 col-md-4">
 		<div class="thumbnail">
-		     <img src="[[image]]" alt="...">
+		   <a href="[[uri]]" class"disabled">
+		       <img src="[[image]]" alt="...">
+		   </a>
 
 			<div class="caption">
 				<a href="[[uri]]" class"disabled">
