--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -43,7 +43,7 @@
 <script id="container_template" type="x-tmpl-mustache">
 	<div class="col-xs-12 col-md-4">
 		<div class="thumbnail">
-		   <a href="[[uri]]" class"disabled">
+		   <a href="[[uri]]" class"thumbnail">
 		       <img src="[[image]]" alt="...">
 		   </a>
 
