--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -43,12 +43,12 @@
 <script id="container_template" type="x-tmpl-mustache">
 	<div class="col-xs-12 col-md-4">
 		<div class="thumbnail">
-		   <a href="[[uri]]" class"thumbnail">
+		   <a href="[[uri]]" class="thumbnail">
 		       <img src="[[image]]" alt="...">
 		   </a>
 
 			<div class="caption">
-				<a href="[[uri]]" class"disabled">
+				<a href="[[uri]]" class="disabled">
 					<h4><i class="[[icon]]"></i> [[name]] </h4>
 				</a>
 				<p>[[description]]</p>				      <div class="modal-footer" style="text-align: left">
